A lot of struggle getting this done, finnally got to make spring security work will implement login auth and jwt tomorrow